<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cat_bottomsheet_coordinator_layout_port"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout_port"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/car_logo_img_view"
                app:layout_constraintEnd_toEndOf="@+id/car_logo_img_view"
                app:layout_constraintStart_toStartOf="@+id/car_logo_img_view"
                app:layout_constraintTop_toTopOf="@+id/car_logo_img_view"
                />

            <ImageView
                android:id="@+id/car_logo_img_view"
                android:layout_width="0dp"
                android:layout_height="238dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/detail_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/car_brand_model_name_detail_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/detail_car_brand_model_name"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceDisplaySmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car_logo_img_view" />

            <TextView
                android:id="@+id/car_year_detail_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/detail_car_year"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceDisplaySmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car_brand_model_name_detail_view" />

            <TextView
                android:id="@+id/current_mileage_detail_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/detail_car_mileage"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceDisplaySmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car_year_detail_view" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/detail_service_mileage_headline_str"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_mileage_detail_view" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/oil_checker_str"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/freez_checker_str"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/air_filt_checker_str"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/grm_checker_str"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/oil_mileage_detail_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:text=""
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/freez_mileage_detail_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:text=""
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oil_mileage_detail_View" />

            <TextView
                android:id="@+id/air_filt_mileage_detail_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:text=""
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/freez_mileage_detail_view" />

            <TextView
                android:id="@+id/grm_mileage_detail_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:text=""
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/air_filt_mileage_detail_View" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/coordinatorLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car_logo_img_view"
                app:layout_constraintVertical_bias="0.0">


            </androidx.coordinatorlayout.widget.CoordinatorLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>


    <RelativeLayout
        android:id="@+id/bottom_drawer"
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:backgroundTint="?attr/colorSurface"
        app:behavior_hideable="false"
        app:behavior_peekHeight="70dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:id="@+id/bottomsheet_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/detail_bottomsheet_headline_str"

            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="?attr/colorOnSurface" />


        <TextView
            android:id="@+id/oil_bottomsheet_textview"
            style="@style/selectableTextView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/bottomsheet_headline"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/oil_bottomsheet_refresh_button"
            android:text="@string/oil_checker_str"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/oil_bottomsheet_refresh_button"
            style="@style/MyIconButtonStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/bottomsheet_headline"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/oil_icon_button"
            app:icon="@drawable/ic_outline_refresh_24"
            app:iconGravity="textStart" />

        <TextView
            android:id="@+id/air_filt_bottomsheet_textview"
            style="@style/selectableTextView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/oil_bottomsheet_textview"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/air_filt_bottomsheet_refresh_button"
            android:text="@string/air_filt_checker_str"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/air_filt_bottomsheet_refresh_button"
            style="@style/MyIconButtonStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/oil_bottomsheet_textview"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/air_filt_icon_button"
            app:icon="@drawable/ic_outline_refresh_24"
            app:iconGravity="textStart" />


        <TextView
            android:id="@+id/freez_bottomsheet_textview"
            style="@style/selectableTextView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/air_filt_bottomsheet_textview"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/air_filt_bottomsheet_refresh_button"
            android:text="@string/freez_checker_str"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/freez_bottomsheet_refresh_button"
            style="@style/MyIconButtonStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/air_filt_bottomsheet_textview"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/freez_icon_button"
            app:icon="@drawable/ic_outline_refresh_24"
            app:iconGravity="textStart" />

        <TextView
            android:id="@+id/grm_bottomsheet_textview"
            style="@style/selectableTextView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/freez_bottomsheet_textview"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/grm_bottomsheet_refresh_button"
            android:text="@string/grm_checker_str"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/grm_bottomsheet_refresh_button"
            style="@style/MyIconButtonStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/freez_bottomsheet_textview"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/grm_icon_button"
            app:icon="@drawable/ic_outline_refresh_24"
            app:iconGravity="textStart" />

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>