<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_const_layout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    >

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/service_interval_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="11dp"
        android:paddingTop="12dp"
        android:paddingEnd="11dp"
        android:paddingBottom="2dp"
        app:hintTextAppearance="@style/hint_style_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/service_interval_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/service_interval_dialog_hint_str"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:selectAllOnFocus="true"
            android:textColorHint="#78909C" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_service_mileage_text_layout"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:paddingStart="11dp"
        android:paddingTop="2dp"
        android:paddingEnd="11dp"
        android:paddingBottom="6dp"
        app:hintTextAppearance="@style/hint_style_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_interval_text_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_service_mileage_edit_text"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:hint="@string/last_service_mileage_dialog_hint_str"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/current_mileage_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/current_mileage_check_box_dialog_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_service_mileage_text_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>





